fixed logo spacing

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,10 +1,10 @@
 .facebookLogo{
   width: 50px;
-  margin: auto;
+  margin: 10px auto auto auto;
 }
 
 .homeContent {
-  margin: 25px auto;
+  margin: 25px auto 50px auto;
 }
 
 .homeImages {
@@ -53,6 +53,7 @@
     font-size: 75px;
     font-style: italic;
     color: sienna;
+    height: 500px;
 }
 
 .tagline {
